# certbot-dns-godaddy

./: .gitignore  Dockerfile  README.md  certbot_dns_godaddy.py  pyproject.toml  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: buildx.yml  ci.yml
snap/: snapcraft.yaml
